Fix Navbar alignment css

--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -55,6 +55,7 @@
 .options{
     display: flex;
     gap:1vw;
+    align-items: center;
 }
 .profile{
     border-radius: 50%;
